test/corpus/binary_compare.txt
================================================================================
binary_compare
================================================================================
10 < 5 > false<=2 >= 0 == 2 >= 1 != 2 in false

--------------------------------------------------------------------------------

(source_file
  (expression
    (binary_expression
      (expression
        (binary_expression
          (expression
            (binary_expression
              (expression
                (binary_expression
                  (expression
                    (binary_expression
                      (expression
                        (binary_expression
                          (expression
                            (binary_expression
                              (expression
                                (binary_expression
                                  (expression
                                    (primary_expression
                                      (number_literal)))
                                  (expression
                                    (primary_expression
                                      (number_literal)))))
                              (expression
                                (primary_expression
                                  (false)))))
                          (expression
                            (primary_expression
                              (number_literal)))))
                      (expression
                        (primary_expression
                          (number_literal)))))
                  (expression
                    (primary_expression
                      (number_literal)))))
              (expression
                (primary_expression
                  (number_literal)))))
          (expression
            (primary_expression
              (number_literal)))))
      (expression
        (primary_expression
          (false))))))
