test/corpus/binary_multiply.txt
================================================================================
binary_plus
================================================================================
10 * 5 / 4 % 10

--------------------------------------------------------------------------------

(source_file
  (expression
    (binary_expression
      (expression
        (binary_expression
          (expression
            (binary_expression
              (expression
                (primary_expression
                  (number_literal)))
              (expression
                (primary_expression
                  (number_literal)))))
          (expression
            (primary_expression
              (number_literal)))))
      (expression
        (primary_expression
          (number_literal))))))
