test/corpus/comment.txt
================================================================================
comment
================================================================================
// foo bar buzz
100

--------------------------------------------------------------------------------

(source_file
  (comment)
  (expression
    (primary_expression
      (number_literal))))
