test/corpus/false.txt
================================================================================
false
================================================================================

false

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (false))))
