test/corpus/field_init_empty.txt
================================================================================
field init
================================================================================
foo{}

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (message
        (identifier)))))
