test/corpus/float.txt
================================================================================
float
================================================================================
1012e10

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (number_literal))))
