test/corpus/float_decimal.txt
================================================================================
float_decimal
================================================================================
1.10

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (number_literal))))
