test/corpus/float_decimal_simple.txt
================================================================================
float_simple
================================================================================
.10

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (number_literal))))
