test/corpus/ident.txt
================================================================================
indent
================================================================================
type

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (identifier))))
