test/corpus/incomplete_list.txt
================================================================================
incomplete list
================================================================================
[x, 1, buzz, bar 

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (list
        (expression
          (primary_expression
            (identifier)))
        (expression
          (primary_expression
            (number_literal)))
        (expression
          (primary_expression
            (identifier)))
        (expression
          (primary_expression
            (identifier)))
        (MISSING "]")))))
