test/corpus/int.txt
================================================================================
int
================================================================================
100000000

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (number_literal))))
