test/corpus/list.txt
================================================================================
list
================================================================================
[1, true, false, null]

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (list
        (expression
          (primary_expression
            (number_literal)))
        (expression
          (primary_expression
            (true)))
        (expression
          (primary_expression
            (false)))
        (expression
          (primary_expression
            (null)))))))
