test/corpus/map_empty.txt
================================================================================
map empty
================================================================================
{}

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (map))))
