test/corpus/map_simple.txt
================================================================================
map simple
================================================================================
{x: 1}

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (map
        (expression
          (primary_expression
            (identifier)))
        (expression
          (primary_expression
            (number_literal)))))))
