test/corpus/null.txt
================================================================================
null
================================================================================

null

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (null))))
