test/corpus/string_backslash.txt
================================================================================
string backslash
================================================================================
r"\\"

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (string
        (escape_sequence)))))
