test/corpus/string_bytes.txt
================================================================================
string bytes
================================================================================
b'foo bar buzz'

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (string
        (string_content)))))
