test/corpus/string_double.txt
================================================================================
string double
================================================================================
"foo bar buzz"

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (string
        (string_content)))))
