test/corpus/string_escapes.txt
================================================================================
string escapes
================================================================================
b"\303\277" 

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (string
        (escape_sequence)
        (escape_sequence)))))
