test/corpus/string_single.txt
================================================================================
string_single
================================================================================
'foo bar buzz'

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (string
        (string_content)))))
