test/corpus/string_triple_double.txt
================================================================================
string triple double
================================================================================
"""foo bar buzz"""

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (string
        (string_content)))))
