test/corpus/string_triple_nested.txt
================================================================================
string triple nested
================================================================================
'''x''x'''	

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (string
        (string_content)
        (string_content)
        (string_content)))))
