test/corpus/string_triple_single.txt
================================================================================
string triple single
================================================================================
'''foo bar buzz'''

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (string
        (string_content)))))
