test/corpus/true.txt
================================================================================
true
================================================================================

true

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (true))))
