test/corpus/unary.txt
================================================================================
unary
================================================================================
!!true

--------------------------------------------------------------------------------

(source_file
  (expression
    (unary_expression
      (expression
        (unary_expression
          (expression
            (primary_expression
              (true))))))))
