test/corpus/unit.txt
================================================================================
unit
================================================================================
100000000u

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (number_literal))))
